More formatting cleanup for chap 11-20. Also added the telepathy macro since the default colors were too light when printed

--- a/4T/book1_intro.tex
+++ b/4T/book1_intro.tex
@@ -1,4 +1,6 @@
 \pagenumbering{gobble}
+~
+\cleardoublepage
 \begin{center}
 ~
 \vskip 10em
@@ -47,8 +49,16 @@ When in the company of his peers outside of the Authority, Oliver's posture, out
 \textbf{Class:} Incorporated	\\
 \textbf{Serial Number:} 2460124601	
 
-``Appears to be in her late teens at first glance, but is probably in her early 20?s [actual age 23]. Stunningly good looking, Hayley has huge pale blue-grey eyes, a flawless golden complexion and absolutely symmetrical features. Her glossy black hair is cut in a practical short cropped style that only serves to emphasize her elegant bone structure. Her figure is tall, leggy and nicely proportioned. She looks healthy, and only slightly less nourished and well fed than a Citizen. Certainly better than most Indentured. She is toned and fit, and moves gracefully like a dancer. She has excellent posture, always. You have never seen her slouch or sprawl. For those who notice such things, she does not act like someone who is really aware of how their appearance impacts other people. She certainly does not purposely solicit that type of attention.''
+``Appears to be in her late teens at first glance, but is probably in her early 20's.  Stunningly good looking, Hayley has huge pale blue-grey eyes, a flawless golden complexion and absolutely symmetrical features.  There is a certain doll-like blankness to her expression.  Her glossy black hair is cut in a practical short cropped style that only serves to emphasize her elegant bone structure.  Her figure is tall, leggy and nicely proportioned.  She looks healthy, and only slightly less nourished and well fed than a Citizen.  Certainly better than most Indentured.  She is toned and fit, and moves gracefully like a dancer.  She has excellent posture, always.  You have never seen her slouch or sprawl.  For those who notice such things, she does not act like someone who is really aware of how their appearance impacts other people.  She certainly does not purposely solicit that type of attention.''
+
+\pagebreak
+
+\begin{center}
+~
+\vskip 7em
+\includegraphics[width=5cm]{img/book1_jaya_shadow.png}
+\end{center}
 
 \pagebreak
 \pagenumbering{arabic}
-\setcounter{page}{4}
+\setcounter{page}{7}
