--- a/4T/ch11.tex
+++ b/4T/ch11.tex
@@ -741,3 +741,8 @@ Dr. Gerhauser, Swan and Micah are in the room.  \hl{Jonah and Jaya are prepped f
 % Exported @ 08/23/15 10:36pm
 \end{flushright}
 
+\begin{center}
+~
+\vskip 5em
+\includegraphics[width=12cm]{img/ch11_drunk_jaya.jpg}
+\end{center}
