--- a/4T/ch13.tex
+++ b/4T/ch13.tex
@@ -18,12 +18,7 @@ Lots of talking, but also some smooches (!) and a date!  ``Is this a kissing boo
 These notes have more gaps and thin spots than usual (I tried to put at least something down but some places I just had to put {[}....{]}), so please amend and append!  Have at ye. :)
 
 
-
-\noindent\hrulefill
-
-
-
- {\LARGE Capability purchases } 
+\jumpHeadline{Capability purchases } 
 
 Ion: Social Chameleon (3--\textgreater 4)
 
@@ -33,7 +28,7 @@ Suko: Hand to Hand (0--\textgreater 1), \hl{Memory for Details (0--\textgreater 
 
 
 
- {\LARGE Communal assets purchases (pending approval) } 
+\jumpHeadline{Communal assets purchases (pending approval) } 
 
 \begin{itemize}
 \item Armor 3, which lets us have four level 1 armors, or two level 2's (basically a flak jacket we can wear under our uniforms?).  Cost: 12 communal VP
@@ -49,13 +44,7 @@ Total spend: 32
 
 
 
-\noindent\hrulefill
-
-
-
-
-
- {\LARGE SAC-09 } 
+\jumpHeadline{ SAC-09 } 
 
 
 \sceneHeadline{Bunk}
@@ -558,9 +547,10 @@ Morgan nods. ``Dismissed.''
 Mr. Jari, here is my list of skills I wish to learn.  Plus some questions.  Please ignore them if they are not appropriate and I apologize for any offense for the stupid questions.  Thank you for your time.
 
 
-
 \textit{Training in:}
 
+{
+\parskip=0pt
 \begin{itemize}
 \item Military protocol and discipline procedures
 \item Determining which details are important to notice and which are not
@@ -573,7 +563,7 @@ Mr. Jari, here is my list of skills I wish to learn.  Plus some questions.  Plea
 \item Hand to hand combat with multiple attackers or someone who is much stronger than me
 \item How to identify different weapons and machines
 \end{itemize}
-
+}
 
 
 \textit{Questions:}
