--- a/4T/ch14.tex
+++ b/4T/ch14.tex
@@ -18,11 +18,7 @@ Please comment, amend and append... you know the drill :D
 
 
 
-\noindent\hrulefill
-
-
-
- {\LARGE Timing notes: } 
+\jumpHeadline{Timing notes: } 
 
 
 
@@ -52,16 +48,10 @@ I can probably pad out a few days here and there but it's not likely to add more
 
 
 
-\noindent\hrulefill
+\jumpHeadline{Shore Leave } 
 
 
-
-
-
- {\LARGE Shore Leave } 
-
-
-\jumpHeadline{\hl{Shore Leave: Hayley} }\footnote{\textbf{Suko T }Thanks for taking the notes for this section Rebecca.   Heh, I think now you understand when I whine about all the talking- it's murder to keep up with it, isn't it? :D  Recording both expression and word choice is tough.  Something is always going to get missed and dropped.  Thankfully the fact that everyone can edit and amend these docs will usually fix the most egregious errors.  Go power of communal review go! :) \textsubscript{01/25/13 2:18pm}}\footnote{$\rightarrow$\textbf{q.google }+1 \textsubscript{01/27/13 4:00pm}}
+\sceneHeadline{\hl{Shore Leave: Hayley} }\footnote{\textbf{Suko T }Thanks for taking the notes for this section Rebecca.   Heh, I think now you understand when I whine about all the talking- it's murder to keep up with it, isn't it? :D  Recording both expression and word choice is tough.  Something is always going to get missed and dropped.  Thankfully the fact that everyone can edit and amend these docs will usually fix the most egregious errors.  Go power of communal review go! :) \textsubscript{01/25/13 2:18pm}}\footnote{$\rightarrow$\textbf{q.google }+1 \textsubscript{01/27/13 4:00pm}}
 
 Hayley goes to see Gillian, who has temporarily moved to Terminus and is staying with a friend until her new quarters are habitable.  Hayley waits for a few hours at the friend's house and then is told to meet Gillian at one of the Citizen clubs in the area.  Hayley, familiar with this sort of place, changes into appropriate clothing, freshens her toilette and heads over.  
 
@@ -230,7 +220,7 @@ Octavia walks up to Hayley. ``I understand you will be joining us.  Very good.  
 Octavia leaves and Hayley watches her leave, sighing a little.  Hayley escorts Gillian to her next appointment and departs back to SAC-09.
 
 
-\jumpHeadline{Shore Leave: Oliver }
+\sceneHeadline{Shore Leave: Oliver }
 
 Oliver calls up his friend \hl{James Ogleby}\footnote{\textbf{q.google }Noting, because we weren't certain about this: James Ogleby is the one who rescued Oliver at the battle of Transit Minor after he'd been shot.
 
@@ -433,7 +423,7 @@ The next day, Dr. Gerhauser makes a concerted effort to keep up the conversation
 Oliver proceeds to get wasted at a local slightly seedy bar, almost getting into a fight, and ends up taking someone to a hotel room for the night. \footnote{\textbf{Adam Kenney }I think I said he actually did take someone back to his hotel room. Which is going to be awkward the next time Dr. Gerhauser asks her baseline questions. \textsubscript{01/26/13 9:34am}}\footnote{$\rightarrow$\textbf{Suko T }Oh really?  Ah so it was just the fight that he avoided.  Yes, that will be fun :) \textsubscript{01/26/13 4:45pm}}\footnote{$\rightarrow$\textbf{q.google }Frankly if it's \_not\_ awkward that bodes worse for the overall relationship.... \textsubscript{01/28/13 11:44am}} He barely makes it to the last train to SAC-09.
 
 
-\jumpHeadline{Shore Leave: Jaya }
+\sceneHeadline{Shore Leave: Jaya }
 
 Jaya heads to L.A. Ink, eager to see her sister and \hl{wash away the bad memories from her time in the Tank}\footnote{\textbf{q.google }Drowning her sorrows in ink. \textsubscript{01/28/13 11:44am}}.  She walks into the tattoo shop, tosses her bag on a chair and gives Padme a big hug.  Padme is tattooing a customer and only barely gets the needle away from their skin in time.
 
@@ -512,7 +502,7 @@ Jaya drops the casual attitude and leans forward.  She speaks slowly and deliber
 Cowed, but never dropping his smile, the guy agrees and Jaya sits back, all smiles again herself.
 
 
-\jumpHeadline{Shore Leave: Jonah }
+\sceneHeadline{Shore Leave: Jonah }
 
 Jonah meets up with Zara, with his package of\hl{promised items ready for trade}\footnote{\textbf{Suko T }The relevant section from Session 05 for context: {[}Jonah{]} asks Zara for a subway map but one of the old ones, a higher quality one than the ones you get for free at the train stations.  Zara says he may be able to find something like that.  His first price is 3 flashlights and the name of the person who gave Jonah the flashlights.  He then reduces that to 3 flashlights and just the name of the station where Jonah got the flashlights.  They haggle a little longer and then settle on one TA flashlight now, and two on delivery and Jonah asks his contact if they'd be open to working with Zara.  Zara asks Jonah if he knows anything about the (presumably) elite team that those flashlights came from.  Jonah is not willing to sell that information at this time. \textsubscript{01/25/13 2:29pm}}.  Zara is playing a simple game which seems to involve using a stick to hit rocks into specific targets in an alley.
 
@@ -590,7 +580,7 @@ Jonah and Zara complete their transaction and part amicably.  Jonah makes a simp
 
 
 
- {\LARGE \textbf{SAC-09} } 
+\sceneHeadline{SAC-09} 
 
 
 
@@ -770,11 +760,7 @@ The doors open....
 
 
 
-\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_\_
-
-
-
- {\LARGE City Station A Challenges } 
+\jumpHeadline{City Station A Challenges } 
 
 
 
