--- a/4T/ch15.tex
+++ b/4T/ch15.tex
@@ -17,14 +17,7 @@ Bad things happened in Nicklepan.  Mom, Dad, don't touch it!  It's eeeevillll.
 Update 1/31/13 ~5:30pm:  Now with pretty pictures!  See the end of the document.  Thanks Nate!  That should help clarify the ``who is where'' planning.
 
 
-
-\noindent\hrulefill
-
-
-
-
-
- {\LARGE City Station A } 
+\jumpHeadline{ City Station A } 
 
 
 
@@ -428,13 +421,10 @@ Meanwhile, Jaya is running up the stairs of the building she entered.  She burst
 
 {[}\textit{\textbf{22 Tokens left in pool}}{]}
 
+\jumpHeadline{ Challenges \& Refreshes }  
 
-
-
-
-\underline{  {\LARGE Challenges \& Refreshes }  }
-
-
+{
+\parskip=0pt
 
 \begin{itemize}
 \item Challenge: Notice Movement 1.  Rangefinder Binoculars 2 (Jaya) → Overcome! \textbf{1 VP (Jaya)}
@@ -481,12 +471,14 @@ Meanwhile, Jaya is running up the stairs of the building she entered.  She burst
 \item Challenge: Head shot 5.  Small Unit Tactics 2 (Jonah) + Basic Uniform 1 (Jonah) + Small arms 1 (Jonah) + \textbf{ {\color[RGB]{255,0,0}Flaw: Wounded shoulder 2{[}0{]} (Jonah)} } + Basic Uniform 1 (Oliver) + Silencer 1 (Oliver) + Crack Shot 3 (Oliver) + Sniper 2 (Oliver) + Focused 2 (Oliver) → Matched
 \end{itemize}
 
+}
 
 
 
+\jumpHeadline{\hl{VP TOTALS} } \footnote{\textbf{Suko T }Also, check that these are correct, I may have missed a challenge here or there or missed an overcome challenge. \textsubscript{01/31/13 10:38am}}
 
-\underline{  {\LARGE \hl{VP TOTALS} }  }\footnote{\textbf{Suko T }Also, check that these are correct, I may have missed a challenge here or there or missed an overcome challenge. \textsubscript{01/31/13 10:38am}}
-
+{
+\parskip=0pt
 Hayley 2
 
 Jaya 1
@@ -494,13 +486,16 @@ Jaya 1
 Jonah 4
 
 Oliver 2
+}
+\newpage
 
 
 
+\begin{center}
+\includegraphics[width=11cm]{img/ch15_battle_map.png}
 
-\includegraphics[width=8cm]{img/ch15_battle_map.png}
 \footnote{\textbf{Suko T }Ooo a battle map!  Pretty sweet. \textsubscript{01/31/13 5:41pm}}\footnote{$\rightarrow$\textbf{Rebecca S. }I like how Lackovich is purple... suggesting half ``good team'', half ``bad team''.  Should we take this as foreshadowing? ;) \textsubscript{02/03/13 12:10am}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Ahahaha. No comment. \textsubscript{02/07/13 4:45pm}}\footnote{$\rightarrow$\textbf{Suko T }+1 \textsubscript{02/14/13 1:32am}}
-
+\end{center}
 
 
 \vspace{\fill}
