--- a/4T/ch16.tex
+++ b/4T/ch16.tex
@@ -14,16 +14,10 @@ We got to explode some heads, bust some jaws and bring home a trophy.  All is ri
 
 
 
-\noindent\hrulefill
+\jumpHeadline{Nicklepan Downtown } 
 
 
-
-
-
- {\LARGE Nicklepan Downtown } 
-
-
-\jumpHeadline{Jaya }
+\sceneHeadline{Jaya }
 
 Jaya kicks open the roof hatch.  The armored man is only about six feet away from her and he spins around to point his rifle at her.
 
@@ -45,17 +39,17 @@ Also known as ``the things the fans of the show go crazy over on the boards'' \#
 He stumbles back again and goes down to one knee.  He pulls out his sidearm and stands once again.  \hl{``Tertius, I was willing to let you go.  But now I am going to hunt down every constituent and everything related to them.  But I'll let this one live.''}\footnote{\textbf{q.google }TWRWWBMIHR \#2 \textsubscript{03/10/13 5:50pm}}\footnote{$\rightarrow$\textbf{Suko T }seconded :) \textsubscript{03/10/13 11:10pm}}  He fires at Jaya's kneecap.
 
 
-\jumpHeadline{Hayley }
+\sceneHeadline{Hayley }
 
 Meanwhile, down below, Lackovich starts putting down some cover fire and tells Hayley to run.  The other armored person starts shooting at Hayley.  {[}\textit{Challenge: Dodge sniper 2. Matched}{]}  Hayley runs as fast as she can across the street and dives gracefully through a broken window in the building that Jaya is on.  Once inside the building Hayley can hear Jaya's shouting from the roof and she races up the stairs, leaving herself entirely exposed {[}\textit{Refresh: Athletics}{]}.
 
 
-\jumpHeadline{Oliver and Jonah }
+\sceneHeadline{Oliver and Jonah }
 
 Upstairs in the building that Hayley just left, Oliver has just heard Jonah cry out as he gets shot by the soldier in the back alley.  Oliver staggers over to Jonah, who is trying to staunch the bleeding but is sliding into shock.  {[}\textit{Reduce Flaw: Gunshot wound to shoulder 2 → 1}{]}.  They patch him up as best they can with their limited supplies.  Oliver is still reeling a bit from everything going on and has to devote all of his attention to helping Jonah, thus missing all of the sounds and activity going on elsewhere {[}\textit{Refresh: Focused 2}{]}.
 
 
-\jumpHeadline{Jaya and Hayley }
+\sceneHeadline{Jaya and Hayley }
 
 {[}\textit{Challenge: Notice 1. Overcome}{]}. The soldier is close enough that Jaya can see that the armor is oozing some strange blue substance that is congealing.  Though she is probably more interested in the gun that is pointed at her knee.  {[}\textit{Challenge: Avoid getting kneecapped 3.  Sent back}{]}.  Because Jaya's uniform is so ill-fitting, he actually misjudges where her knee is and instead shoots her in the thigh above the knee.  {[}\textit{Challenge: Smack him in the chin.  Matched}{]} Jaya pulls out the broken chair leg she's been using as a truncheon and wallops him in the chin.  The truncheon shatters but he steps back again and draws his sidearm.
 
@@ -68,7 +62,7 @@ At this point Hayley bursts through the roof hatch, instantly drawing his attent
 Over Hayley's radio, Jaya can hear Lackovich saying, ``Hayley report!''
 
 
-\jumpHeadline{Jonah and Oliver }
+\sceneHeadline{Jonah and Oliver }
 
 When Hayley doesn't reply, Lackvich says over the radio, ``Constables, report!''
 
@@ -89,7 +83,7 @@ Jonah makes his way back across the street without getting seen.  \hl{{[}\textit
 Meanwhile Oliver has climbed out of the rear window and dropped to the street below, landing badly as his hands lose their grip.  {[}\textit{Refresh: Arm strength 2}{]}.  He limps over to the body of the soldier he'd shot and tries to open the helmet.  {[}\textit{Challenge: Open the helmet 2.  Matched}{]}.  Using sheer force, he rips off the faceplate to see a pale human face.  Paler than he is used to, the man is clean shaven and youngish looking.  Features are a little hard to see since the lower half of his jaw is missing, and he is definitely dead.
 
 
-\jumpHeadline{Jaya and Hayley }
+\sceneHeadline{Jaya and Hayley }
 
 Jaya and Hayley exchange a look and are completely in agreement on what to do next.  They both raise their weapons and unload on the guy.  {[}\textit{Challenge: Put him down 4.  Matched}{]}.  They riddle him with holes and he stumbles back and collapses against the low wall around the edge of the roof.
 
@@ -118,7 +112,7 @@ Lackovich's voice comes over the radio getting increasingly frantic, ``Shit!  Sh
 Jaya realizes that she has forgotten to turn her radio back on, and surreptitiously tosses her radio off somewhere so she can claim hers got lost {[}\textit{Refresh: Senior Constable 2}{]}.  Hayley sits there in a daze, unable to force herself to stand up or focus enough to do anything. {[}\textit{Refresh: Conditioned 2}{]}
 
 
-\jumpHeadline{Jonah and Oliver }
+\sceneHeadline{Jonah and Oliver }
 
 Jonah uses the radio to find Oliver's position, but immediately after that, Oliver hushes his own radio.  Jonah spends some time re-adjusting and fixing his armor {[}\textit{Refresh: Armor 2}{]}. Oliver hoists the body over his shoulder and starts staggering back to where Lackovich is.  Jonah makes it to the corner where Lackovich is and can see that she seems to have a head wound and her face is covered in dirt and cement dust.  The corner that she is at has been mostly blown out, only providing partial cover.
 
@@ -175,7 +169,7 @@ Rook demands a report on what the things are.
 Oliver again encourages Lackovich and Jonah to make a break for it while he covers them, but they gang up on him and force him to come with them.  Jonah and Oliver grab the body while Lackovich leads the way to the stairs.
 
 
-\jumpHeadline{Hayley and Jaya }
+\sceneHeadline{Hayley and Jaya }
 
 {[}\textit{Challenge: Notice 1. Overcome}{]} As Hayley and Jaya stumble out onto the street, Hayley looks for the body of the man she threw off the roof, but it is gone.  Jaya looks down the street and see sees a small metal object coming toward them.  {[}\textit{Challenge: Don't get blown up, again 2. Matched}{]}.  Jaya manages to push Hayley to the ground and there is a giant flash of light and a huge explosion.
 
@@ -190,7 +184,7 @@ Hayley looks at Jaya's shoulder consideringly and replies, ``I've had that befor
 Nonplussed by this, Hayley grabs Jaya by her uniform and starts blanket-dragging her toward the stairs.  She's so focused on keeping her grip on Jaya and trying not to step on body parts that she goes straight down the middle of the road, totally exposed {[}\textit{Refresh: Athletics 2}{]}
 
 
-\jumpHeadline{All together at last! }
+\sceneHeadline{All together at last! }
 
 Oliver starts shooting at the fliers to chase them off {[}\textit{Challenge: Chase off the fliers 3. Matched}{]}.  He succeeds but two of the fliers loop back and start heading toward us again. 
 
@@ -268,7 +262,7 @@ Jaya collapses and passes out. Hayley woozily looks over at Jaya to make sure sh
 
 
 
- {\LARGE \textbf{SAC-09} } 
+\sceneHeadline{SAC-09} 
 
 
 
@@ -357,10 +351,7 @@ Morgan ends the debriefing and says that everyone should write up a report for t
 {[}\textit{\textbf{1 Token left in pool}}{]}
 
 
-
-
-
-\underline{  {\LARGE Challenges \& Refreshes }  }
+\sceneHeadline{Challenges \& Refreshes } 
 
 
 
@@ -426,8 +417,10 @@ Oliver: 3 grenades/explosions
 
 
 
-\underline{  {\LARGE VP TOTALS }  }
+\jumpHeadline{VP TOTALS } 
 
+{
+\parskip=0pt
 Hayley: 2
 
 Jaya: 4
@@ -435,10 +428,10 @@ Jaya: 4
 Jonah: 3
 
 Oliver: 4
+}
 
 
-
-\underline{  {\LARGE Quotes }  }
+\jumpHeadline{ Quotes } 
 
 
 
