--- a/4T/ch17.tex
+++ b/4T/ch17.tex
@@ -13,14 +13,7 @@
 Lots of Shore Leave angst and Competency Tests for the team!  Uh oh....
 
 
-
-\noindent\hrulefill
-
-
-
-
-
- {\LARGE SAC-09 Interlude } 
+\jumpHeadline{ SAC-09 Interlude } 
 
 
 
@@ -36,10 +29,7 @@ Oliver's report asks for more tech.  He describes seeing the dead bodies and the
 
 
 
- {\LARGE Shore Leave } 
-
-
-\jumpHeadline{Shore Leave: Hayley }
+\sceneHeadline{Shore Leave: Hayley }
 
 Hayley goes to visit Signe, politely sending a message ahead to let Signe know she's coming.  She seems to gain a lot of comfort just by being around Signe, even though they don't talk too much.  She says that she asked for Signe to come to the base but isn't sure it will happen.  Signe says that Trenton won't be able to come see her for a while, which makes her sad.  Signe shows Hayley a stack of letters from Trenton, in a somewhat messy scrawl, with random doodles and drawings in the margins.  Hayley mentions that she will be meeting Tim and invites Signe along.  Signe says that she will go if Hayley feels unsafe but otherwise she doesn't leave the building much.  Hayley says it is not necessary and trots off to her date.
 
@@ -96,7 +86,7 @@ They continue to talk and as Tim gets increasingly drunk, he is more and more fr
 Afterward, she leaves his house and returns to Signe's place.  Signe asks her for the details and they spend the evening going over what happened in great detail.  Hayley spends the night again in Signe's bed.
 
 
-\jumpHeadline{Shore Leave: Jaya }
+\sceneHeadline{Shore Leave: Jaya }
 
 Jaya shows up at LA Ink, slightly tipsy from drinking half of her ``Hazard Pay'' bonus, clutching a \hl{500}\footnote{\textbf{Suko T }equivalent to a beer ``40'' \textsubscript{03/12/13 1:40pm}}\footnote{$\rightarrow$\textbf{Adam Kenney }500 cc's? \textsubscript{03/16/13 4:22pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }The term 'cc' wasn't used, but it's about that much. \textsubscript{03/20/13 6:53am}} in one hand.  Padme is sobbing and their aunt is fussing over her. 
 
@@ -135,8 +125,9 @@ She heads to a bar and gets into a bar fight that goes poorly since she has forg
 
 
 
-\jumpHeadline{Shore Leave: Oliver }
+\sceneHeadline{Shore Leave: Oliver }
 
+% there's a gnarly page break here because TOO MANY FOOTNOTES!
 Oliver returns home.  Their butler, \hl{Jeffries}\footnote{\textbf{Nathaniel Ford }Did we really call him that? Really? REALLY? And by 'we' I mean 'me'. :P \textsubscript{03/21/13 9:30pm}}\footnote{$\rightarrow$\textbf{Suko T }I believe some amount of beer may have influenced this decision. :)  It certainly caused no small amount of laughter at the time. \textsubscript{04/02/13 10:56am}}\footnote{$\rightarrow$\textbf{q.google }I believe you said ``Zhafriz''.  We Anglicized it: cultural influences on psycho-linguistic frameworks are notably strong contributors to audial interpretation of words. \textsubscript{04/06/13 1:36pm}}\footnote{$\rightarrow$\textbf{Suko T }Really?  I thought it was proposed as a joke because it was so awfully cliche, and it was so funny that we just went with it.  No one could think of better and honestly, we had other things on our minds at the time (like the Orc of Anglia!).  It was decided way back in Session 9. \textsubscript{04/06/13 4:24pm}}\footnote{$\rightarrow$\textbf{q.google }No, not really.  I was just having fun spinning up an explanation.  I apparently wasn't being ridiculous enough ;).
 
 (I confess I like ``Zhafriz'' :). \textsubscript{04/06/13 6:12pm}}\footnote{$\rightarrow$\textbf{Nathaniel Ford }Hmm. Seems his full name is 'Zhafriz Jeffries'. Who knew!? ;-D
@@ -220,7 +211,7 @@ Oliver quietly leaves.
 
 
 
-\jumpHeadline{Shore Leave: Jonah }
+\sceneHeadline{Shore Leave: Jonah }
 
 Jonah meets up with one of his contacts, 'Zhok (Ashok).   'Zhok is a merchant and is Jonah's go-between for getting some of his money to his family without anyone knowing.  Jonah (or Tibari as he is known to 'Zhok) gives 'Zhok money and 'Zhok passes it along to Jonah's family in the form of discounted prices on supplies.
 
@@ -264,7 +255,7 @@ Jonah leaves and walks away a few blocks before \hl{allowing himself to freak ou
 
 
 
- {\LARGE Backlash:  }  {\LARGE \hl{It has begun} } \footnote{\textbf{q.google }ROFL \textsubscript{04/06/13 2:04pm}}
+\jumpHeadline{ Backlash:  \hl{It has begun} } \footnote{\textbf{q.google }ROFL \textsubscript{04/06/13 2:04pm}}
 
 
 \sceneHeadline{SAC-09  {[}38 Backlash Tokens{]}}
@@ -541,7 +532,7 @@ Hayley just looks at Jaya for instructions, so Jaya steps forward and says to Ro
 
 
 
-\underline{  {\LARGE Backlash Challenges }  }
+\jumpHeadline{ Backlash Challenges }  
 
 
 
