--- a/4T/ch18.tex
+++ b/4T/ch18.tex
@@ -14,14 +14,7 @@
 Buttons were pushed.  Literal and emotional.  Hopefully next session there will be an earth-shattering kaboom!  
 
 
-
-\noindent\hrulefill
-
-
-
-
-
- {\LARGE Welcome to the  }  {\LARGE Backlash } 
+\jumpHeadline{ Welcome to the  Backlash } 
 
 
 \sceneHeadline{SAC-09  {[}28 Backlash Tokens{]}}
@@ -581,7 +574,7 @@ The situation has grown so odd that\hl{Jaya finally realizes that she must be tr
 
 
 
-\underline{  {\LARGE Backlash Challenges }  }
+\jumpHeadline{ Backlash Challenges }  
 
 
 
@@ -615,7 +608,7 @@ The situation has grown so odd that\hl{Jaya finally realizes that she must be tr
 Backlash Tokens generated from Flaws from this session: 7
 
 Leftover Backlash in pool from previous sessions: 2
-\sceneHeadline{Total Backlash Pool: 9}
+\textbf{Total Backlash Pool: 9}
 
 \jumpHeadline{VP Totals }
 
