--- a/4T/ch19.tex
+++ b/4T/ch19.tex
@@ -747,20 +747,20 @@ Hayley looks around the empty apartment sadly.  She carefully stows the duffle b
 
 \jumpHeadline{Ongoing Challenges }  
 
-\begin{itemize}
-\item Ongoing Challenge: The Gerhauser Sisters 
-\end{itemize}
+{
+\parskip=0pt
+- Ongoing Challenge: The Gerhauser Sisters 
 
-Get Swan to confront Dr. Gerhauser over what is being done to the team.
+- Get Swan to confront Dr. Gerhauser over what is being done to the team.
 
-\extraIndent{→ Gorgeous 3 (Hayley)}
+--- Gorgeous 3 (Hayley)
 
-Get Dr. Gerhauser to treat Jonah more like a colleague and give up more information.
+- Get Dr. Gerhauser to treat Jonah more like a colleague and give up more information.
 
-\extraIndent{ → Social Chameleon 4 (Jonah)}
+--- Social Chameleon 4 (Jonah)
 
 
-
+}
 
 \jumpHeadline{Quotes }
 
@@ -790,4 +790,5 @@ Get Dr. Gerhauser to treat Jonah more like a colleague and give up more informat
 \textsubscript{last edited by \textbf{Suko T} @ 05/12/15 12:50am}
 % Exported @ 08/24/15 8:58am
 \end{flushright}
+
 
