--- a/4T/ch20.tex
+++ b/4T/ch20.tex
@@ -14,7 +14,8 @@ New promotions!  New guns!  Lackovich in peril!  Arch nemesis lurking!
 
 
 
-NOTE: I got sick of typing ``\_\_\_ thought'' or the even clunkier ``\_\_\_\_ thought to \_\_\_\_'' and the overlapping speech/thinking was getting complicated.  So I just color coded the thoughts:  {\color[RGB]{204,0,0}Jaya} ,  {\color[RGB]{230,145,56}Hayley} ,  {\color[RGB]{106,168,79}Oliver} ,  {\color[RGB]{60,120,216}Jonah}  without attribution.  We just have to remember who can hear which thoughts.  Hope that makes sense to people.  If it's unreadable, say so and I'll try something else.  At least it's more colorful.
+NOTE: I got sick of typing ``\_\_\_ thought'' or the even clunkier ``\_\_\_\_ thought to \_\_\_\_'' and the overlapping speech/thinking was getting complicated.  So I just color coded the thoughts:  \jayaBrain{Jaya}, \hayleyBrain{Hayley},  \oliverBrain{Oliver} ,  \jonahBrain{Jonah}\footnote{\textbf{Rebecca (as editor) }Suko came up with excellent colors for the characters- Jaya (red), Hayley (orange), Oliver (green), Jonah (blue). Unfortunately they don't print well in black \& white. So symbols were selected \& the colors retained but severely darkened so the text was readable.}
+  without attribution.  We just have to remember who can hear which thoughts.  Hope that makes sense to people.  If it's unreadable, say so and I'll try something else.  At least it's more colorful.
 
 
 
@@ -407,11 +408,11 @@ Jaya is ready to leave immediately to go hunt these down but Hayley suggests the
 
 The junior TA officer returns with a map.  Jaya tells him to mark down the locations on the map.  While he is doing that, Hayley speaks with Hassan and requests a guide.  She frequently consults with her Patrol Handbook and doesn't have her Agent ID number memorized.  
 
-:: {\color[RGB]{106,168,79}You may want to stop consulting the Handbook all the time Hayley, it doesn't look good.} ::
+:: \oliverBrain{You may want to stop consulting the Handbook all the time Hayley, it doesn't look good.} ::
 
 Hassan is polite but gives her the runaround.  When Hayley asks about dangerous areas and potential trouble spots, Hassan claims that he has no dangerous areas in his district.  He eventually agrees to get us a guide but it will take an hour or so of paperwork.
 
-:: {\color[RGB]{60,120,216}He's suspicious of us.} ::
+:: \jonahBrain{He's suspicious of us.} ::
 
 {[}\textit{Challenge: Get a Native Guide 2.  Air of Command 2 (Jaya) → Matched}{]}.  Jaya channels Morgan's air of authority and browbeats Hassan into giving us a guide right away.  
 
@@ -431,11 +432,11 @@ The junior officer greets Jaya and Hayley, ``Hello, I'm Junior Constable Frank-w
 
 They step outside the TA office and Jaya looks around, ``Where's Oli-uh Constable, uh...''
 
-:: {\color[RGB]{60,120,216}Langdon.} ::
+:: \jonahBrain{Langdon.} ::
 
 ``...Constable Langdon,'' finishes Jaya.
 
-:: {\color[RGB]{106,168,79}Don't mention me.} ::
+:: \oliverBrain{Don't mention me.} ::
 
 ``He, um...What?  I, um, have no idea who you are talking about,'' says Hayley, unconvincingly.
 
@@ -443,7 +444,7 @@ Jaya looks at Hayley incredulously.  ``You know.  OLIVER.  Where is he?  Tell hi
 
 ``I, uh, uh...'' Hayley flounders.
 
-:: {\color[RGB]{106,168,79}Remember I'm wearing the urban camouflage. I can't be seen with you.} ::
+:: \oliverBrain{Remember I'm wearing the urban camouflage. I can't be seen with you.} ::
 
 ``He's not wearing a uniform!'' says Hayley
 
@@ -451,7 +452,7 @@ Jaya looks at Hayley incredulously.  ``You know.  OLIVER.  Where is he?  Tell hi
 
 ``Uh, it seems like you need to talk about this... I'll just go stand over here,'' says Franke, backing away quickly.
 
-:: {\color[RGB]{106,168,79}I need to stay hidden.  The Orc is here.} ::
+:: \oliverBrain{I need to stay hidden.  The Orc is here.} ::
 
 ``This is a covert operation!'' says Hayley, latching onto her recently acquired Handbook knowledge.  ``He can't be seen because, um, then they would know where he was and it wouldn't be, um, properly \textit{strategic}.''
 
@@ -461,9 +462,9 @@ Jaya looks at Hayley incredulously.  ``You know.  OLIVER.  Where is he?  Tell hi
 
 Hayley asks to see the map and then holds it up and opens her eyes very wide and stares at it intently, trying to make sure Oliver can see it and where the marked buildings are.  Jaya gives her a strange look and Franke starts looking a little unsettled.
 
-:: {\color[RGB]{106,168,79}I can see it Hayley.  Don't stare at the map like that, you'll look weird.} ::
+:: \oliverBrain{I can see it Hayley.  Don't stare at the map like that, you'll look weird.} ::
 
-:: {\color[RGB]{230,145,56}A new rule to add to the list.} ::
+:: \hayleyBrain{A new rule to add to the list.} ::
 
 ``Stop doing that, give that back,'' says Jaya.
 
@@ -475,9 +476,9 @@ Hayley hands the map back and asks, ``Did I look weird?''
 
 They start walking, but Oliver quickly falls behind, partially because of his limp and partially because he has to stay incognito.
 
-:: {\color[RGB]{106,168,79}You have to slow down.} ::
+:: \oliverBrain{You have to slow down.} ::
 
-Hayley starts dawdling, looking up at the buildings, but Jaya just gets impatient and wants to keep moving.  \hl{Somehow}\footnote{\textbf{Suko T }Such a convoluted conversation to get there too. \textsubscript{05/09/13 12:30am}}, the best delay tactic ends up being encouraging Jaya to have a drink or three at a bar.  :: {\color[RGB]{106,168,79}Positive reinforcement.} ::  Hayley attempts to explain why Oliver is traveling so slowly.  Jaya casually insults Oliver, Hayley gives a muddled but sincere defense, and Oliver tells her to let it go.  This little tête-à-tête allows Oliver to catch up.
+Hayley starts dawdling, looking up at the buildings, but Jaya just gets impatient and wants to keep moving.  \hl{Somehow}\footnote{\textbf{Suko T }Such a convoluted conversation to get there too. \textsubscript{05/09/13 12:30am}}, the best delay tactic ends up being encouraging Jaya to have a drink or three at a bar.  :: \oliverBrain{Positive reinforcement.} ::  Hayley attempts to explain why Oliver is traveling so slowly.  Jaya casually insults Oliver, Hayley gives a muddled but sincere defense, and Oliver tells her to let it go.  This little tête-à-tête allows Oliver to catch up.
 
 
 
@@ -485,7 +486,7 @@ They all converge at the first location.  The building is locked and closed for 
 
 
 
-:: {\color[RGB]{60,120,216}Use the forensic bag.  I know how.} ::
+:: \jonahBrain{Use the forensic bag.  I know how.} ::
 
 Jaya pulls out the forensic bag and with practiced ease (of course she knows how to use it!) she looks around the building. {[}\textit{Challenge: see if anyone broke into the building 1. Forensic Kit 1 (Jaya) → Matched}{]}.  It is very clear that no one has broken into this building and there are no signs of Lackovich.
 
@@ -499,13 +500,13 @@ Jaya pulls out the forensic bag and with practiced ease (of course she knows how
 
 ``In the Warehouse District.''
 
-:: {\color[RGB]{230,145,56}Signe!!} ::
+:: \hayleyBrain{Signe!!} ::
 
 ``I know people there!  Everyone is very nice there,'' says Hayley.  She frowns slightly as she remembers.  ``At least they were.  I hope they are not all dead.  Are they all dead there?  You should check.''
 
 ``Uh, what??'' says Franke, bewildered.
 
-:: {\color[RGB]{106,168,79}Ix-nay on the ``dead'' thing Hayley:} :
+:: \oliverBrain{Ix-nay on the ``dead'' thing Hayley:} :
 
 Hayley says nothing and just smiles inanely at Franke instead.
 
@@ -513,9 +514,9 @@ Hayley says nothing and just smiles inanely at Franke instead.
 
 ``Take us here next,'' says Jaya, pointing to the furthest building marked on the map.
 
-:: {\color[RGB]{106,168,79}I won't be able to catch up.  Go to the next nearest first.} ::
+:: \oliverBrain{I won't be able to catch up.  Go to the next nearest first.} ::
 
-:: {\color[RGB]{230,145,56}Of course.  It's more efficient to do that.  Like running errands for Ms. Vorrutyer} .::
+:: \hayleyBrain{Of course.  It's more efficient to do that.  Like running errands for Ms. Vorrutyer} .::
 
 ``Agent, wouldn't it be easier to go to the nearer one first?  It would be more efficient,'' says Hayley.
 
@@ -523,7 +524,7 @@ Hayley says nothing and just smiles inanely at Franke instead.
 
 
 
-The next building is empty, just has furniture in it.  But the third building is a 20 story apartment building.  It is an active building and people are heading in and out of it.  There's an old woman :: {\color[RGB]{230,145,56}\hl{Ewww, old person.}} ::\footnote{\textbf{Adam Kenney }So true \textsubscript{05/21/13 8:37pm}} sitting on a bench outside watching as Jaya and Hayley figure out what to do.    It is the mid afternoon at this point.  
+The next building is empty, just has furniture in it.  But the third building is a 20 story apartment building.  It is an active building and people are heading in and out of it.  There's an old woman :: \hayleyBrain{\hl{Ewww, old person.}} ::\footnote{\textbf{Adam Kenney }So true \textsubscript{05/21/13 8:37pm}} sitting on a bench outside watching as Jaya and Hayley figure out what to do.    It is the mid afternoon at this point.  
 
 
 
@@ -533,19 +534,19 @@ The next building is empty, just has furniture in it.  But the third building is
 
 Jaya gives Franke a bit of money (very small amount) and tells him to go wait at the nearby bar for further instructions.  Hayley looks around and Oliver directs her gaze to where he is.  
 
-:: {\color[RGB]{230,145,56}Don't wave. Don't wave.  Don't give away his position.} ::  :: {\color[RGB]{106,168,79}Good.} ::  Hayley smiles and holding her hands carefully at her sides, turns back to Jaya.
+:: \hayleyBrain{Don't wave. Don't wave.  Don't give away his position.} ::  :: \oliverBrain{Good.} ::  Hayley smiles and holding her hands carefully at her sides, turns back to Jaya.
 
 
 
 Jaya and Hayley enter the building and head for the stairs.
 
-:: {\color[RGB]{106,168,79}You should start at the top floor and flush him out.} ::
+:: \oliverBrain{You should start at the top floor and flush him out.} ::
 
 ``Agent, we should start at the top floor,'' suggests Hayley to Jaya.
 
-:: {\color[RGB]{60,120,216}That sounds good.} ::
+:: \jonahBrain{That sounds good.} ::
 
-:: {\color[RGB]{204,0,0}I love being called Agent:} : 
+:: \jayaBrain{I love being called Agent:} : 
 
 ``Sure,'' says Jaya, and they head for the stairs.
 
@@ -557,13 +558,13 @@ They make it up about 8 floors and can see that further up, some of the stairs a
 
 ``We're not supposed to go up there, it's dangerous.''
 
-:: {\color[RGB]{106,168,79}Did the Orc damage the stairs?} ::
+:: \oliverBrain{Did the Orc damage the stairs?} ::
 
 ``How long have the stairs been like that?'' Hayley asks the kid.
 
 ``A long time I guess,'' he shrugs.
 
-:: {\color[RGB]{60,120,216}Has he seen anyone come through here?} ::
+:: \jonahBrain{Has he seen anyone come through here?} ::
 
 ``Hey kid, have you seen anyone come through here?'' asks Jaya.
 
@@ -577,7 +578,7 @@ They make it up about 8 floors and can see that further up, some of the stairs a
 
 ``Nah, I'm not allowed up there.  Or in the basement,'' says the kid.
 
-:: {\color[RGB]{60,120,216}Basement?} ::
+:: \jonahBrain{Basement?} ::
 
 ``Basement?'' says Jonah out loud.  
 
@@ -603,7 +604,7 @@ Jaya and Hayley make it up another 7 floors before the stairs are completely imp
 
 There are definitely rats and the tracks of several klipspringers, and small child-sized footprints all over.  No clear signs of adults coming through, or Lackovich or the Orc.
 
-:: {\color[RGB]{60,120,216}Follow the klipspringers, they know the safest ways up.} ::
+:: \jonahBrain{Follow the klipspringers, they know the safest ways up.} ::
 
 ``We're going this way,'' says Jaya, heading down the hallway, following the klipspringer trails.  Hayley and Jaya find another stairwell and make it up one more flight of stairs to the 16th floor but the upper levels are blocked again.
 
@@ -613,13 +614,13 @@ They head out into the hallway and Jaya goes to a window and leans out to take a
 
 {[}\textit{Challenge: Notice 1.  Binoculars 2 (Oliver) → Overcome!}{]}. From his vantage point outside, Oliver can see something metallic stuck to the side of the building near the window that Jaya is looking out of.
 
-:: {\color[RGB]{106,168,79}Get away from the window.  There's something outside of it.  It could be a bomb.} ::
+:: \oliverBrain{Get away from the window.  There's something outside of it.  It could be a bomb.} ::
 
 Hayley moves toward Jaya, ``Agent, there's a bomb outside the window.  Please get away from the window.''
 
 ``There's a what?  Where?'' says Jaya and she tries to stick her head out the window again.
 
-Hayley grabs her uniform and won't let her do it.  Jaya looks annoyed at Hayley and tries to lean out the window again.  :: {\color[RGB]{230,145,56}NO! Safety of the team comes first.} ::  Hayley blocks her again.  Jaya glares at Hayley...
+Hayley grabs her uniform and won't let her do it.  Jaya looks annoyed at Hayley and tries to lean out the window again.  :: \hayleyBrain{NO! Safety of the team comes first.} ::  Hayley blocks her again.  Jaya glares at Hayley...
 
 
 
@@ -687,3 +688,9 @@ Oliver: 1
 % Exported @ 08/24/15 9:03am
 \end{flushright}
 
+
+\begin{center}
+~
+\vskip 0em
+\includegraphics[width=12cm]{img/book1_jaya_misc_tough.png}
+\end{center}
