--- a/4T/ch3.tex
+++ b/4T/ch3.tex
@@ -233,3 +233,9 @@ Hayley: ``Maybe he drowned?''
 \textsubscript{last edited by \textbf{Nathaniel Ford} @ 05/07/15 4:28pm}
 % Exported @ 08/22/15 12:58pm
 \end{flushright}
+
+\begin{center}
+~
+\vskip 2em
+\includegraphics[width=8cm]{img/book1_jaya_thug.png}
+\end{center}
